Fixed navbar being expanding past content-size causing horizontal scroll bar to appear

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,7 +6,8 @@ body {
 
 nav {
 	background-color: #1E263D;
-	width: 100vw;	
+	width: 100%;	
+	text-align: center;
 }
 
 .content {
@@ -15,7 +16,7 @@ nav {
 }
 
 .title-text {
-	text-align: center;
+	display: inline-block;
 	padding: 10px;
 	font-size: 25px;
 }
